--- a/src/items/NutriLife-SiteTemplate/NutriLife Site/Templates/NutriLife Site.yml
+++ b/src/items/NutriLife-SiteTemplate/NutriLife Site/Templates/NutriLife Site.yml
@@ -6,7 +6,7 @@ Path: /sitecore/system/Settings/Feature/JSS Experience Accelerator/NutriLife Sit
 SharedFields:
 - ID: "0d21f818-1938-4cd8-b0a8-a44f73d69367"
   Hint: Enabled
-  Value: 
+  Value: 1
 - ID: "41ac536a-923a-43f9-ac87-f3993f638125"
   Hint: Tenant Modules
   Value: |
@@ -112,7 +112,7 @@ Languages:
       Value: NutriLife Site
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "32dc1558-76b3-497d-97a0-9e5e2889e5aa"
+      Value: "59831d73-c532-4155-8938-b76a8e3af86f"
     - ID: "9f437e68-a84d-48ae-8ce1-a3e26c0b5e64"
       Hint: Description
       Value: "The NutriLife website template offers a clean, modern design with vibrant colors and intuitive navigation, perfect for creating corporate-based websites."
@@ -122,7 +122,7 @@ Languages:
         sitecore\justin.vogt@sitecore.com
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240822T235909Z
+      Value: 20240918T190408Z
     - ID: "da855368-e5f2-4932-ae55-7f8b08a5a205"
       Hint: Content
       Value: |
